--- a/chess.cabal
+++ b/chess.cabal
@@ -27,8 +27,8 @@ executable chess
                      , haskeline
                      , microlens 
                      , microlens-th
-                     , monad-loops
                      , random
                      , vector
+                     , vty
                      , text
   default-language:    Haskell2010
